WV-51: добавлена полезная нагрузка в виде картинок
